
[metadata]
name = saleor_pack_data
version = 0.0.1
author = jyoti_amrute
author_email = jyotiamrutea@gmail.com
description = A small saleor example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jyotiamrute/saleor_pack_prj

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix,
    Operating System :: MacOS :: MacOS X,
    Operating System :: Microsoft :: Windows,
[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
